# my-wiki

./: .env.example  .gitignore  README.md  pyproject.toml
llm_wiki/: __init__.py  cli.py  config.py  embedder.py  llm.py  rag.py  vault.py
llm_wiki/commands/: add_cmd.py  ask_cmd.py  config_cmd.py  embed_cmd.py  ingest_cmd.py  init_cmd.py  lint_cmd.py  log_cmd.py  mcp_cmd.py  normalize_cmd.py  search_cmd.py  serve_cmd.py  status_cmd.py  web_cmd.py
llm_wiki/schemas/: __init__.py  models.py
sample_vault/raw/: intro-to-transformers-mock.md  llm-scaling-laws-mock.txt
sample_vault/schema/: AGENTS.md  page_conventions.md  wiki_schema.md
tests/: conftest.py  test_commands.py  test_config.py  test_llm.py  test_vault.py
