[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-wiki"
version = "0.1.0"
description = "An LLM-maintained local markdown wiki"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# Core install is intentionally lightweight — markitdown is optional
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
llm-wiki = "llm_wiki.cli:app"

[project.optional-dependencies]
# Basic normalization: text, HTML, CSV, XML
normalize = [
    "markitdown>=0.1.0",
    "pypdf>=4.0.0",
]
# Full normalization: + PDF, Office docs, images, audio
normalize-full = [
    "markitdown[all]>=0.1.0",
    "pypdf>=4.0.0",
]
# RAG support (numpy is now a core dep — this extra is kept for backwards compatibility)
rag = []
# MCP server for OpenCode, Claude Desktop, Cursor, Cline
# uvicorn + starlette needed for --http (SSE) mode
mcp = ["mcp>=1.0.0", "uvicorn>=0.29.0", "starlette>=0.37.0"]
# Install everything
all = [
    "markitdown[all]>=0.1.0",
    "pypdf>=4.0.0",
    "mcp>=1.0.0",
    "uvicorn>=0.29.0",
    "starlette>=0.37.0",
]
# Development and testing
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["llm_wiki"]
